--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://freedom3725.github.io/chill/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/redline/">路線</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/chill-route/">路線</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/chill-style/">風格</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/chill/#signup">Contact</a></li>
                     </ul>
@@ -36,9 +36,9 @@
                         <!-- Post header-->
                         <header class="mb-4">
                             <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">Odin 士林放感情</h1>
+                            <h1 class="fw-bolder mb-1">木衛二醫務所</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on June 11, 2021</div>
+                            <div class="text-muted fst-italic mb-2">沉浸式醫院風</div>
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
@@ -79,7 +79,7 @@
                                             <div class="flex-shrink-0"><img src="assets/FB.svg" alt="lacation" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">網站</div>
-                                                Odin 士林放感情 →
+                                                木衛二醫務所 →
 												<a href="https://www.facebook.com/odindarts/" target="_blank" rel="noopener noreferrer">網站</a>
                                             </div>
                                         </div>
