--- a/index.html
+++ b/index.html
@@ -46,22 +46,25 @@
                         <!-- Post content-->
                         <section class="mb-5">
 						    <p> </p>
-                            <p>「Odin 士林放感情」位於捷運士林站2號出口走路3分鐘。
-							   定位為兼具餐飲以及lounge bar的時尚複合式空間，以Odin北歐神話戰神為命名的一間午茶飛鏢小酒館，芬蘭為北歐五國中其一，北歐神話奧丁戰神融入在了D2飛鏢機舞台上的猛烈戰火下，智慧與野心不可或缺，以此命名。
-							   並以奧丁作為設計調酒、與空間的概念，並將三者隨著神話的延伸意義串連起來，成為充滿時尚品味的主題性地標。</p>
+                            <p>「木衛二 醫務所」距離捷運國父紀念館站2號出口3分鐘路程。品牌概念起源於「伽利略在木星旁所發現的二號衛星，
+							英文取名Europa，與歐洲是同一個字根，而名字來自於美麗的腓尼基公主，用來形容美麗的人事物。」，
+                            一間全白的建築安靜的坐落於此，上頭大大的「醫」字樣，是以「醫院」為設計靈感的餐廳。</p>
 							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/2.jpg" alt="..." width=800 /></div>
 							<p> </p>
-							<p>老闆當初設立「放感情」這間酒吧，就是希望在士林這個地方能有一個可以跟朋友喝酒、放鬆的地方，而現在這裡也成為了周邊的學生和上班族們下班、下課之後可以放鬆小酌的地方，店裡營造出了一種家的感覺，有什麼煩心事就找Bartender聊聊吧!
-                               他們總有個默契就是不會讓任何一位客人無聊到，在店裡總能看到他們每桌都要去聊聊天、攀談一下。 </p>
+							<p>負責人之一的William認為：「醫院、診所是我們看病的地方，其實茶飲、料理對人們當下的心情也是一種解藥，
+							  所以想把茶用這種方式體現。」因此，從外觀就以大量白色做設計，玻璃門外貼著像診所看診時間的營業時間。一進門見到的是掛號處、領藥處。
+							    用鐵盤、洗手乳、藥袋呈現醫務所的每個小角落。餐桌上頭還有在古董燈具行挖到的「手術燈」，
+							   完美呈現在手術室裡用餐的氛圍。呼吸診療室代表「吸煙室」、麻醉手術室後頭是「酒窖」，每個地方都創意無限。 </p>
 							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/3.jpg" alt="..." width=800 /></div>
 		                    <p> </p>
-							<p>Odin店面其實不大，但可以容下很多人，有個大銀幕可以放MV，門兩側還有許多限量酒、飛鏢，
-							   一、二樓座位區蠻適合5-6人一起聚餐喝酒，座位間隔較近，講話聲音要大聲點才聽得到彼此。
-							   另外有兩人面對面的座位、舒適的沙發、跟Bartender面對面的吧檯。</p>
+							<p>入內後由身著白袍、護理師的服務人員進行額溫測量、酒精消毒，再引領就座，讓人以為真來到診所，一區區標註診間、麻醉手術室、批價與領藥，
+							  想讓客人們都能獲得某種程度上美食治療，療癒最近工作壓力、生活疲累等任一煩心事情，它成為你我心底中心靈上的治癒之所。 </p>
 							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/4.jpg" alt="..." width=800 /></div>
 		                    <p> </p>
-							<p>除了調酒之外，Shot、軟性飲料、咖啡也都有，來酒吧其實主要就是聊天，但如果夜晚太漫長話不夠多也不用害怕，這裡遊戲很多保證不無聊， 餓了也不用怕，炸物、主食一桌share下來也不貴，填飽肚子剛剛好，如果想來這裡吃飽，也不用擔心花費太高 。
-                               每一個人來到這裡不管是開心還是難過，只要進到Odin來，對他們他說就只有一句話：「喝什麼你不要管，反正先喝就對了！」</p>
+							<p>木衛二醫務所提供沈浸式體驗，例如病歷表、統一批價價格與對症下”藥”等，要讓診療的服務流程更完整，
+							包括從一進門的問診、填寫體檢表，接著開處方，讓你把藥（茶包）帶回家，心情不好時，記得定期回診，這裡只管治癒你的不愉快，
+							把煩惱都拋到九霄雲外。木衛二希望用茶入料理，達到治癒人心的目的，因此每道餐點都回歸茶飲品牌《木衛二》最擅長的「茶」做發想。
+							  木衛二白天是間治癒人心的餐廳，晚上則化身「茶酒吧」，連酒款通通都用茶做發想。</p>
 					   </section>
                     </article>
                     <!-- Comments section-->
@@ -80,7 +83,7 @@
                                             <div class="ms-3">
                                                 <div class="fw-bold">網站</div>
                                                 木衛二醫務所 →
-												<a href="https://www.facebook.com/odindarts/" target="_blank" rel="noopener noreferrer">網站</a>
+												<a href="https://www.facebook.com/%E6%9C%A8%E8%A1%9B%E4%BA%8C-%E9%86%AB%E5%8B%99%E6%89%80-101358118149926/" target="_blank" rel="noopener noreferrer">FB粉專</a>
                                             </div>
                                         </div>
 										<!-- Child comment 1-->
@@ -88,8 +91,8 @@
                                             <div class="flex-shrink-0"><img src="assets/location.svg" alt="lacation" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">地址</div>
-                                                台北市士林區大東路152號 →
-                                                <a href="https://www.google.com/maps/place/Odin+%E5%A3%AB%E6%9E%97%E6%94%BE%E6%84%9F%E6%83%85-%E9%A4%90%E9%85%92%E9%A4%A8%E6%8E%A8%E8%96%A6+%E5%B9%B3%E5%83%B9%E8%AA%BF%E9%85%92%E9%85%92%E5%90%A7+bar+bistro+%E4%BA%BA%E6%B0%A3%E7%89%B9%E8%89%B2%E9%A4%90%E9%85%92%E7%BE%8E%E9%A3%9F%E6%8E%A8%E8%96%A6+%E7%B6%B2%E7%BE%8E%E9%85%92%E5%90%A7/@25.0923199,121.5232217,17z/data=!3m1!4b1!4m5!3m4!1s0x3442aebb34f53bb9:0x512b60f5da825a80!8m2!3d25.0923128!4d121.5253985">地圖</a>												
+                                                台北市大安區光復南路280巷46號1樓 →
+                                                <a href="https://www.google.com/maps/place/%E6%9C%A8%E8%A1%9B%E4%BA%8C+%E9%86%AB%E5%8B%99%E6%89%80/@25.0399131,121.55315,17z/data=!3m2!4b1!5s0x3442abc6171b96b9:0x32e9448775546291!4m5!3m4!1s0x3442abef1019e6c5:0x4a0e238562748df4!8m2!3d25.0399083!4d121.5553387">地圖</a>												
 											</div>
                                         </div>
 									    <!-- Child comment 2-->
@@ -97,7 +100,7 @@
                                         <div class="flex-shrink-0"><img src="assets/phone-call.svg" alt="call" width="40" height="40"></div>
                                         <div class="ms-3">
                                             <div class="fw-bold">電話</div>
-                                            02 2882 8666
+                                            02 2731 3800
                                         </div>
                                     </div>
                                         <!-- Child comment 3-->
@@ -105,7 +108,7 @@
                                             <div class="flex-shrink-0"><img src="assets/clock.svg" alt="clock" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">營業時間</div>
-                                                19:00 - 03:00
+                                                
                                             </div>
                                         </div>
 										<!-- Child comment 4-->
@@ -113,7 +116,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                平日：低消$400｜假日：低消$600
+                                                無
                                             </div>
                                         </div>
                                     </div>
@@ -137,7 +140,7 @@
                         <div class="card-header">Google評分</div>
                         <div class="card-body">
                             <div class="input-group">
-                                4.8星
+                                4.4星
                             </div>
                         </div>
                     </div>
@@ -145,7 +148,7 @@
                     <div class="card mb-4">
                         <div class="card-header">Side Widget</div>
 						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.png" alt="..." /></div>
-                        <div class="card-body">鄰近捷運士林站二號出口
+                        <div class="card-body">鄰近捷運國父紀念館站2號出口
 						<a class="btn btn-primary" href="https://www.metro.taipei/cp.aspx?n=ECEADC266D7120A7">乘車時間</a></div>
                     </div>
                 </div>
