--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                                         <div class="ms-3">
                                             <div class="fw-bold">電話</div>
                                             02 2731 3800
+											<a href="https://inline.app/booking/-M4qoaqghJzZ1b8eZsfF:inline-live-1/-M4qoaubgZiyTwdXcQ50?language=zh-tw">線上訂位</a>
                                         </div>
                                     </div>
                                         <!-- Child comment 3-->
@@ -108,7 +109,7 @@
                                             <div class="flex-shrink-0"><img src="assets/clock.svg" alt="clock" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">營業時間</div>
-                                                
+                                                17:00-01:00
                                             </div>
                                         </div>
 										<!-- Child comment 4-->
