--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		                    <p> </p>
 							<p>入內後由身著白袍、護理師的服務人員進行額溫測量、酒精消毒，再引領就座，讓人以為真來到診所，一區區標註診間、麻醉手術室、批價與領藥，
 							  想讓客人們都能獲得某種程度上美食治療，療癒最近工作壓力、生活疲累等任一煩心事情，它成為你我心底中心靈上的治癒之所。 </p>
-							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/4.jpg" alt="..." width=800 /></div>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/4.jpeg" alt="..." width=800 /></div>
 		                    <p> </p>
 							<p>木衛二醫務所提供沈浸式體驗，例如病歷表、統一批價價格與對症下”藥”等，要讓診療的服務流程更完整，
 							包括從一進門的問診、填寫體檢表，接著開處方，讓你把藥（茶包）帶回家，心情不好時，記得定期回診，這裡只管治癒你的不愉快，
